fixed text align

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 
 
 html {
-    background-color: #eae7dc;
+    background-color: #ffffff;
     font-family: 'Courier Prime';
     font-size: 0.95em;
     line-height: 1.5em;
